# sw-community

./: README.md
chaoss-settings/: organizations.json  projects.json  setup.cfg
